fix some UI bugs on safari and androiod browser

--- a/app/assets/css/main.css
+++ b/app/assets/css/main.css
@@ -2,6 +2,10 @@ html, body{
 	width:100%;
 }
 
+.nav-record-link{
+	display: inline;
+}
+
 .preview-overlay{
 }
 
